<resources>
    <string name="app_name">Childlike</string>
    <string name="tree">나무</string>
    <string name="complete">완료</string>
    <string name="select_test_title">테스트 선택</string>

    <string name="test_title">테스트</string>
    <string name="cancel_exe">실행 취소</string>
    <string name="reset">초기화</string>
    <string name="test_complete">결과 보기</string>

    <string name="info_title">테스트자 정보입력</string>
    <string name="info_notice">테스트할 아동의 정보를 입력해 주세요</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="sex">성별</string>
    <string name="img">프로필 사진</string>
    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

    <string name="mypage_title">마이페이지</string>
    <string name="add_user">사용자 추가하기</string>
    <string name="show_result">결과보기</string>
    <string name="member_info">계정 정보</string>

    <string name="result_title">결과</string>
    <string name="date">날짜</string>
    <string name="processing">분석중...dsjaldkjfalskjgaosidjfqkejflaksdjgaosjwlkf</string>

    <string name="detail_result_title">상세결과</string>
    <string name="result">스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.
    스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.
    스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.
    스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.
    스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.
    스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.
    스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.
    스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.
    스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.
    스트레스도 없고 행복합니다. 이대로만 계속 자라면 좋겠습니다.</string>

    <string name="member_info_title">계정 정보</string>
    <string name="email">이메일</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원 탈퇴</string>

    <string name="kakao_app_key">059b303b471209a35e38c09ef2301bc0</string>
</resources>
