<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_title_margin">

        <ImageView
            android:id="@+id/test_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_marginLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/test_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_gothic_bold"
            android:text="@string/test_title"
            android:textColor="@color/titleText"
            android:textSize="@dimen/activity_title_size"
            android:layout_margin="@dimen/activity_title_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.childlike.draw.DrawView
        android:id="@+id/painter"
        android:layout_width="match_parent"
        android:layout_height="450dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_exe"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/buttonText"
            android:fontFamily="@font/nanum_gothic" />
        <Button
            android:id="@+id/reset_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/buttonText"
            android:fontFamily="@font/nanum_gothic"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/complete_btn"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/test_complete"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/buttonText"
        android:fontFamily="@font/nanum_gothic"
        android:layout_marginTop="5dp"/>

</LinearLayout>