<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/mypage_img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/img_110x110"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/mypage_img"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mypage_item_text_margin"
            android:fontFamily="@font/nanum_gothic"
            android:text="@string/name"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toEndOf="@id/mypage_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mypage_item_text_margin"
            android:fontFamily="@font/nanum_gothic"
            android:text="@string/age"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toEndOf="@id/mypage_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sex_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_gothic"
            android:text="@string/sex"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toEndOf="@id/mypage_img"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/select_user_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/select_user_btn"
                android:layout_width="70dp"
                android:layout_height="36dp"
                android:background="@drawable/radio_btn_off"
                android:button="@null"
                android:fontFamily="@font/nanum_gothic_bold"
                android:gravity="center"
                android:text="선택하기"
                android:textColor="@color/gray" />
        </RadioGroup>

        <Button
            android:id="@+id/show_result_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/mypage_item_text_margin"
            android:background="@drawable/btn_background_gray"
            android:fontFamily="@font/nanum_gothic_bold"
            android:text="@string/show_result"
            android:textColor="@color/pointColor" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/gray_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>