<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemberInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_title_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/member_info_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/member_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_title_margin"
            android:fontFamily="@font/nanum_gothic_bold"
            android:text="@string/member_info_title"
            android:textColor="@color/titleText"
            android:textSize="@dimen/activity_title_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/kakao_default_profile_image"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/member_info_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="이름"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/nanum_gothic_bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/profile_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/member_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_info_name_text"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_gothic"
                android:text="@string/email"
                android:textColor="@color/text"
                android:textSize="@dimen/text_size" />
            <TextView
                android:id="@+id/gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_gothic"
                android:text="@string/sex"
                android:textColor="@color/text"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/member_info_text_margin"/>
            <TextView
                android:id="@+id/age_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_gothic"
                android:text="@string/age"
                android:textColor="@color/text"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/member_info_text_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="abcde@naver.com"
                android:textColor="@color/text"
                android:textSize="@dimen/text_size"
                android:fontFamily="@font/nanum_gothic" />
            <TextView
                android:id="@+id/gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="성"
                android:textColor="@color/text"
                android:textSize="@dimen/text_size"
                android:fontFamily="@font/nanum_gothic"
                android:layout_marginTop="@dimen/member_info_text_margin"/>
            <TextView
                android:id="@+id/age_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="24"
                android:textColor="@color/text"
                android:textSize="@dimen/text_size"
                android:fontFamily="@font/nanum_gothic"
                android:layout_marginTop="@dimen/member_info_text_margin"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="300dp"
        android:layout_height="@dimen/button_height"
        android:fontFamily="@font/nanum_gothic_bold"
        android:text="@string/logout"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/pointColor"
        android:layout_margin="100dp"
        android:background="@drawable/btn_background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_info_layout"
        style="?android:attr/borderlessButtonStyle"/>
    <Button
        android:id="@+id/withdrawal_btn"
        android:layout_width="300dp"
        android:layout_height="@dimen/button_height"
        android:fontFamily="@font/nanum_gothic_bold"
        android:text="@string/withdrawal"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/pointColor"
        android:background="@drawable/btn_background_white"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout_btn"
        style="?android:attr/borderlessButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>